[package]
name = "can-utils"
description = "Handy modules and utilities for manipulating CAN data and interfaces."
documentation = "https://docs.rs/can-utils"
version = "0.1.0"
authors = [ "M@ Dunlap <mattdunlap@gmail.com>" ]
categories = [ "can", "embedded", "hardware-support", "no-std" ]
keywords = ["can", "canbus", "can-fd"]
license = "MIT"
repository = "https://github.com/dunmatt/can-utils"

[dependencies]

[features]
